--- a/web-client/angular.json
+++ b/web-client/angular.json
@@ -29,7 +29,8 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/typeface-montserrat/index.css"
+              "node_modules/typeface-montserrat/index.css",
+              "node_modules/font-awesome/css/font-awesome.css"
             ],
             "scripts": []
           },
@@ -94,7 +95,8 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/typeface-montserrat/index.css"
+              "node_modules/typeface-montserrat/index.css",
+              "node_modules/font-awesome/css/font-awesome.css"
             ],
             "scripts": []
           }
