--- a/web-client/angular.json
+++ b/web-client/angular.json
@@ -30,7 +30,7 @@
             "styles": [
               "src/styles.scss",
               "node_modules/typeface-montserrat/index.css",
-              "node_modules/font-awesome/css/font-awesome.css"
+              "node_modules/@fortawesome/fontawesome-free/css/all.css"
             ],
             "scripts": []
           },
@@ -96,7 +96,7 @@
             "styles": [
               "src/styles.scss",
               "node_modules/typeface-montserrat/index.css",
-              "node_modules/font-awesome/css/font-awesome.css"
+              "node_modules/@fortawesome/fontawesome-free/css/all.css"
             ],
             "scripts": []
           }
