Change some configs.

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>ch.silasberger</groupId>
-    <artifactId>cards-on-the-web-prototype</artifactId>
+    <artifactId>cards-against-a-manatee</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>cards-on-the-web-prototype</name>
+    <name>cards-against-a-manatee</name>
     <description>Prototype for the Cards on the Web backend</description>
 
     <properties>
