--- a/web-client/angular.json
+++ b/web-client/angular.json
@@ -67,6 +67,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
+            "host": "0.0.0.0",
+            "port": 4200,
             "browserTarget": "frontend:build"
           },
           "configurations": {
