--- a/server/pom.xml
+++ b/server/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.6.RELEASE</version>
+        <version>2.6.6</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>ch.silasberger</groupId>
-    <artifactId>cards-on-the-web-prototype</artifactId>
+    <artifactId>cards-against-a-manatee</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>cards-on-the-web-prototype</name>
-    <description>Prototype for the Cards on the Web backend</description>
+    <name>cards-against-a-manatee</name>
+    <description>Cards Against a Manatee - Backend</description>
 
     <properties>
         <java.version>11</java.version>
@@ -38,12 +38,12 @@
         <dependency>
             <groupId>io.reactivex.rxjava3</groupId>
             <artifactId>rxjava</artifactId>
-            <version>3.0.1</version>
+            <version>3.1.4</version>
         </dependency>
         <dependency>
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
-            <version>0.9.12</version>
+            <version>0.10.2</version>
         </dependency>
 
         <dependency>
